[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-pyyaml"
version = "0.1.0"
description = "whytrail explainer for PyYAML's MarkedYAMLError (line/column, problem, snippet)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "pyyaml>=6.0"]

[project.entry-points."whytrail.explainers"]
pyyaml = "whytrail_pyyaml:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_pyyaml"]
