[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-requests"
version = "0.1.0"
description = "whytrail explainer for requests.Response and RequestException"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "requests>=2.20"]

[project.entry-points."whytrail.explainers"]
requests = "whytrail_requests:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_requests"]
