[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-rq"
version = "0.1.0"
description = "Log a whytrail explanation on every RQ (Redis Queue) job failure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "rq>=1.15"]

[project.optional-dependencies]
# rq itself needs a real Redis connection at runtime, correctly not
# declared above -- the test suite simulates one with fakeredis instead
# of requiring an actual Redis server in CI, which is a test-only tool,
# not something whytrail-rq depends on to function.
test = ["fakeredis"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_rq"]
