[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-scrapy"
version = "0.1.0"
description = "Log a whytrail explanation on every Scrapy spider_error"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "scrapy>=2.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_scrapy"]
