[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-sentry"
version = "0.1.0"
description = "Attach whytrail explanations to Sentry events via before_send"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "sentry-sdk>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_sentry"]
